--- a/style.css
+++ b/style.css
@@ -16,10 +16,27 @@ html ::-webkit-scrollbar{
     height: 10px;
 }
 
+.all-content{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000 ;
+   
+}
+
+
 
 
 #navbar{
     background-color: #000000;
+    width: 100%;
+    height: 100%;
 
 }
 #logo img{
