--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Merriweather", serif;
+    font-family: "Poppins", sans-serif;
 }
 html ::-webkit-scrollbar-track{
     background: transparent;
 }
 html ::-webkit-scrollbar-thumb{
-    background: orange;
+    background: rgb(0, 255, 17);
     border-radius: 10px;
 }
 html ::-webkit-scrollbar{
@@ -24,19 +24,18 @@ html ::-webkit-scrollbar{
     width: 100%;
     background: rgb(255, 255, 255);
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     z-index: 1000 ;
    
 }
 
-
-
-
 #navbar{
-    background-color: #000000;
+   
     width: 100%;
     height: 100%;
+    
+    box-shadow: 5px 5px  rgb(46, 45, 45);
+ 
 
 }
 #logo img{
@@ -46,20 +45,21 @@ html ::-webkit-scrollbar{
 }
 
 .nav-item .nav-link{
-    color: rgb(255, 255, 255);
-    padding: 1rem;
+    color: rgb(0, 0, 0);
+    padding: .5rem;
     font-weight: 900;
-    font-size: 18px;
-    transition: 0.5s;
-    margin-left: 50px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  
+    font-size: 16px;
+    transition: 0.5s ease-in;
+    margin-left: 40px;
+    font-family: monospace; 
 }
 .nav-item .nav-link:hover{
-    background: #dc8039;
-    border-radius: 5px;
-    color: rgb(232, 223, 223);
+    background-color: #dc8039;
+    border-radius: 15px;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    margin: 10px;
+
     
 }
 #navbar form button{
@@ -78,12 +78,16 @@ html ::-webkit-scrollbar{
 }
 #home  .content h1 {
     text-align: center;
-    font-size: 24px;
-    color: white;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
     font-size: 4rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont,
-     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 
-     'Helvetica Neue', sans-serif;
+    letter-spacing: 1px;
+    line-break: 9px;
+    font-family: "Poppins", sans-serif;
+    font-weight: lighter;
+    font-style: unset;
+  
     
 
 }
@@ -111,7 +115,7 @@ html ::-webkit-scrollbar{
     width: 150px;
     height: 36px;
     margin-top: 20px;
-   border-radius: 5px;
+   border-radius: 30px;
    background-color: white;
    font-weight: bold;
    border: none;
@@ -122,6 +126,7 @@ html ::-webkit-scrollbar{
 #btn:hover{
     background: #dc8039;
     color: white;
+
 }
 
 
@@ -161,6 +166,7 @@ html ::-webkit-scrollbar{
     font-weight: bold;
     transition: 0.5s;
     cursor: pointer;
+    border-radius: 30px;
 }
 #about-btn:hover{
     background-color: #dc8039;
@@ -338,6 +344,7 @@ html ::-webkit-scrollbar{
     font-weight: bold;
     margin-top: 30px;
     cursor: pointer;
+    border-radius: 30px;
 }
 #col{
     width: 40%;
@@ -381,16 +388,13 @@ html ::-webkit-scrollbar{
 
 #blogs{
     width: 100%;
-    height: fit-content;
-   
-    box-shadow: rgba(149, 157, 165, 0.2) 10px 8px 24px ;
-   
+    height: fit-content;  
 }
 #blogs .heading7{
     text-align: center;
     font-size: 30px;
     color: black;
-    font-weight: bold;
+
     border-bottom: 5px solid #dc8039;
 }
 #blogs .heading7 span{
@@ -409,6 +413,7 @@ html ::-webkit-scrollbar{
     color: rgb(255, 255, 255);
     background:#dc8039;
     cursor: pointer;
+    border-radius: 30px;
 
 }
 
@@ -475,19 +480,24 @@ html{
     line-height: 50px;
 }
 
-@media screen and (min-width:280px) and (max-width:890px) {
+@media screen and (max-width:750px) {
     #home  .content  {
         display:none;
         font-size: medium;
     }
     #navbar{
         background-color: rgb(255, 255, 255);
+        transition:0.5s ease;
+        transition-property: none;
     }
     .nav-item .nav-link{
-        color: black;
+        color: rgb(0, 0, 0);
         text-align: center;
-        font-family: sans-serif;
+        padding: 5px;
         border: 1px solid rgb(255, 255, 255);
+        font-family: " "Montserrat", sans-serif ";
+        font-weight: 600;
+
     }
 
     #about p{
@@ -496,6 +506,12 @@ html{
     }
     #about{
         height: fit-content;
+       
+    }
+    #about .container{
+        position: relative;
+        margin-top: 520px;
+        top: 50%;
     }
 
     img{
@@ -503,10 +519,14 @@ html{
         height: 50%;
     }
     #home video{
-        height: 120%;
-        width: 100%;
-        padding: 10px;
-        border-radius: 20px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%; 
+        height: 100%;
+        object-fit: fill;
+        background-position: center;
+        background-repeat: no-repeat;
     }
    
 }
