--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ html{
     }
     #home video{
         position: absolute;
-        top: 0;
+        top: 50%;
         left: 0;
         width: 100%; 
         height: 100%;
