--- a/style.css
+++ b/style.css
@@ -511,7 +511,7 @@ html{
     #about .container{
         position: relative;
         margin-top: 620px;
-        top: 50%;
+
     }
 
     img{
@@ -520,7 +520,7 @@ html{
     }
     #home video{
         position: absolute;
-        top: 50%;
+        top: 0;
         left: 0;
         width: 100%; 
         height: 100%;
